Made my updates

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,18 +8,59 @@ output:
 
 ## Loading and preprocessing the data
 
-
+setwd("/users/michaelpearlman/Coursera/Reproducible Research/RepData_PeerAssessment1")
+require("dplyr") ## dplyr is used for structuring the data for analysis
+require("ggplot2") ## ggplot2 is required for several plots
+require("lattice") ## lattice plot is required for the weekday-weekend plot
+options(scipen = 999) ## eliminate scientific notation
+activity <- read.csv(unz("activity.zip","activity.csv")) ## read in the data
+activity <- tbl_df(activity) ## structure the data as a tbl class
 
 ## What is mean total number of steps taken per day?
-
-
-
+activity_days <- activity %>% group_by(date) %>% summarise(total.steps = sum(steps))
+hist(activity_days$total.steps, breaks = 25, main = "Histogram of Total Steps per Day")
+mean((activity_days$total.steps), na.rm = TRUE)
+median((activity_days$total.steps), na.rm = TRUE)
 ## What is the average daily activity pattern?
-
-
-
+activity$interval.factor <- as.factor(activity$interval)
+activity_interval <- activity %>% group_by(interval.factor) %>% 
+  summarise(mean.steps = mean(steps, na.rm =TRUE))
+activity_interval$interval <- as.numeric(as.character(activity_interval$interval.factor))
+plot(activity_interval$interval, activity_interval$mean.steps, type = "l", xaxt="n", 
+     xlab = "<-----------------Morning         5-minute interval          Night----------------->", 
+     ylab = "mean steps", main = "Daily Activity Pattern", sub = "Average steps recorded for October-November 2012")
+axis(1, at = seq(100, 2300, by = 100), las = 2)
+max_steps_interval <- which.max(activity_interval$mean.steps)
+print(activity_interval[max_steps_interval,])
 ## Imputing missing values
-
-
-
+sum(is.na(activity$steps))
+activity$weekday <- weekdays(as.Date(activity$date))
+activity$weekday <- factor(activity$weekday, levels= c("Monday", 
+    "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"))
+    activity_day_NA <- activity %>% group_by(weekday) %>% summarise(sum(is.na(steps)))
+print(activity_day_NA)
+activity_day$interval <- as.numeric(as.character(activity_day$interval.factor))
+ggplot(data=activity_day, aes(x=interval, y=mean.steps)) + geom_line() + facet_wrap(~weekday) +
+labs(title = "Mean steps per Interval for each day of the Week")
+activity_day <- activity %>% group_by(weekday, interval.factor) %>% 
+  summarise(mean.steps = mean(steps, na.rm =TRUE))
+activity_impute <- merge(activity, activity_day, by=c("weekday","interval.factor"))
+activity_impute$impute.steps <- ifelse(is.na(activity_impute$steps), 
+                                       activity_impute$mean.steps, activity_impute$steps)
+                                       activity_impute_mean <- activity_impute %>% group_by(date) %>% 
+  summarise(total.steps = sum(impute.steps))
+hist(activity_impute_mean$total.steps, breaks = 25, 
+     main = "Histogram of Total Steps per Day using Imputed Data")
+     mean(activity_impute_mean$total.steps)
+     median(activity_impute_mean$total.steps)
+    activity_day_mean <- activity %>% group_by (date, weekday)  %>%  summarise(total.steps = sum(steps)) %>% 
+  group_by (weekday) %>% summarise(mean.steps = round(mean(total.steps, na.rm = TRUE),0))
+print(activity_day_mean)
 ## Are there differences in activity patterns between weekdays and weekends?
+activity_impute <- activity_impute %>% 
+  mutate(weekend = ifelse(weekday == "Saturday" | weekday == "Sunday", "weekend", "weekday"))
+  activity_impute_mean <- activity_impute %>% group_by(weekend, interval) %>% 
+  summarise(mean.steps = mean(impute.steps))
+xyplot(mean.steps ~ interval | weekend, data = activity_impute_mean, 
+       type = "l", layout = c(1,2), xlab = "Interval", ylab = "Number of Steps", 
+       main = "Average Steps by 5-minute Interval for Weekends and Weekdays")
